from ucommon 4.2.2 to 4.3.0
- shell::path added.
- fsys for descriptor.
- keyfile extended.

from ucommon 4.2.1 to 4.2.2
- reorg how we do cmake path configurations.

from ucommon 4.2.0 to 4.2.1
- proposed barrier dec from Leon.
- added fsys::islink symlink check function.
- keyfile::save method added, registry interfaces.

from ucommon 4.1.7 to 4.2.0
- some clarification of linked object abi.

from ucommon 4.1.6 to 4.1.7
- small fixes in cmake to add includes to projects, etc.

from ucommon 4.1.5 to 4.1.6
- fixed permission of shared memory, now world readable if not umasked.

from ucommon 4.1.4 to 4.1.5
- posix timers have become experimental since seems broken on some platforms

from ucommon 4.1.3 to 4.1.4
- revised cmake for unix builds, fixed cmake bug with non-stdlib

from ucommon 4.1.2 to 4.1.3
- new check for posix timing and monotomic clocking
- thread unit test expanded to verify timed operations

from ucommon 4.1.1 to 4.1.2
- configuration clearification for posix timers
- linkage fix for secure and sstream; no copy constructor

from ucommon 4.1.0 to 4.1.1
- rexlock try method and better thread inheritence
- timer fix for dll linkage, again broken windows
- thread specific storage
- fixes for cmake builds with openssl and intl support
- mingw32, windows header and openssl link issues

from ucommon 4.0.5 to 4.1.0
- security system logging.
- cleanup of cmake.
- clearer idea of what shell::errexit is.
- cleanup of pointer templates, Object pointers now object_pointer, temporary
  is now temporary object, new "generic" smart pointer to be added.
- new containers.h to seperate use of contained resources from thread.h and
  basic threading primitives.
- linked_allocator template added for easy access to a free list managed
  object pool.

from ucommon 4.0.4 to 4.0.5
- smarter openssl search.
- simplified service handling.
- exiting critical handler added.

from ucommon 4.0.3 to 4.0.4
- make it easier to subclass cipher key for special purposes.